--- a/index.html
+++ b/index.html
@@ -9,7 +9,25 @@
 </head>
 
 <body>
+    <section>
+        <div class="half-width">
+            <div class="box-conteiner">
+                <h1>Stay Focused on</h1>
+                <h1><span class="color-orange">Mission 2023</span></h1>
+            </div>
+            <div>
+                <p>I am a new web developer. This is my First Assignment. In that Course I learn many verious thing.Now
+                    I am happy.Alhamdulillah</p>
+                <a class="link" target="_blank"
+                    href="https://www.facebook.com/reel/983327642886523?fs=e&s=cl&mibextid=rS40aB7S9Ucbxw6v">Explore
+                    Now</a>
+            </div>
+        </div>
+        <div class="half-width">
+            <img src="images/person/person-0.png" alt="">
+        </div>
 
+    </section>
 </body>
 
 </html>
