--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="first-conteiner">
         <div class="half-width">
             <div class="box-conteiner">
                 <h1>Stay Focused on</h1>
@@ -28,6 +28,65 @@
         </div>
 
     </section>
+    <h1 id="align-center">My Mission in <span class="color-orange"> 2023</span></h1>
+    <section class="second-conteiner">
+
+        <div class="mission-conteiner">
+            <img src="images/illustrators/illustrator-1.png" alt="">
+            <h3>Mission</h3>
+            <p>Today I learn a new things in my office. This work is very importent for our company. Because of we clear
+                our company's goods with this proccess</p>
+        </div>
+        <div class="vission-conteiner">
+            <img src="images/illustrators/illustrator-2.png" alt="">
+            <h3>Vission</h3>
+            <p>We clear the goods in this procces. This procces is very hard. if we any mistake in this procces then we
+                pay for huge money</p>
+        </div>
+        <div class="goal-conteiner">
+            <img src="images/illustrators/illustrator-3.png" alt="">
+            <h3>Goals</h3>
+            <p>We are living four members in my room. Everyone is very friendly with others. we live with happy in our
+                room</p>
+        </div>
+    </section>
+    <section class="third-conteiner">
+        <div class="coding-conteiner">
+            <img src="images/pictures/coding.png" alt="">
+        </div>
+        <div class="develope-conteiner">
+            <h2>Develope</h2>
+            <h2>without limits</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam eius pariatur quae. Qui illo est quasi
+                tempora magnam hic. Suscipit, possimus quisquam quaerat repudiandae sit voluptatibus animi quia voluptas
+                beatae?</p>
+            <a class="link" target="_blank"
+                href="https://www.facebook.com/reel/983327642886523?fs=e&s=cl&mibextid=rS40aB7S9Ucbxw6v">Read the
+                documentation</a>
+        </div>
+    </section>
+    <section class="four-conteiner">
+        <div>
+            <h2>Know our</h2>
+            <h2>Global community</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia quo autem facilis ullam. Rem quos
+                exercitationem dolorum sit id, dolores nesciunt, distinctio culpa velit similique architecto repellendus
+                obcaecati nihil dolorem.</p>
+            <a class="link" target="_blank"
+                href="https://www.facebook.com/reel/983327642886523?fs=e&s=cl&mibextid=rS40aB7S9Ucbxw6v">Read the
+                documentation</a>
+        </div>
+        <div>
+            <img src="images/pictures/project.png" alt="">
+        </div>
+    </section>
+    <section class="five-conteiner">
+        <footer>
+            <h2>mission <span class="color-orange">2023</span></h2>
+            <p>Hard work. perseverance and determination for 2023</p>
+        </footer>
+    </section>
+
 </body>
 
 </html>
